# vitis_ai

./: .gitignore  README.md  copy.sh  copy_mipi.sh  ultra96v1.tcl  ultra96v1_base.json  ultra96v1_base.tcl  ultra96v1_base_pfm.tcl  ultra96v1_base_xsa.tcl  ultra96v1_mipi.json  ultra96v1_mipi.tcl  ultra96v1_mipi.xdc  ultra96v1_mipi_pfm.tcl  ultra96v1_mipi_xsa.tcl  ultra96v2.tcl  ultra96v2_base.tcl  ultra96v2_base_pfm.tcl  ultra96v2_base_xsa.tcl  ultra96v2_mipi.json  ultra96v2_mipi.tcl  ultra96v2_mipi_pfm.tcl  ultra96v2_mipi_xsa.tcl
data/ILSVRC2012_val/: download.sh
dpu_prj/: Makefile  dpu_conf.vh  strip_interconnects.tcl
dpu_prj/config_file/: prj_config_ultra96_1dpu
dpu_prj/scripts/: package_dpu_kernel.tcl  package_sfm_kernel.tcl
dpu_prj/syslink/: strip_interconnects.tcl
dpu_prj_mipi/: strip_interconnects.tcl
dpu_prj_mipi/config_file/: prj_config_ultra96_1dpu
petalinux/: BUILD.txt
petalinux/meta-inipro/conf/: layer.conf
petalinux/meta-inipro/recipes-ai/dnndk/: dnndk.bb
petalinux/meta-inipro/recipes-ai/dpcma/: dpcma.bb
petalinux/meta-inipro/recipes-ai/dpcma/files/: dpcma.c
petalinux/meta-inipro/recipes-ai/dpu/: README  dpu.bb
petalinux/meta-inipro/recipes-ai/dpu/files/: Makefile  dpucore.c
petalinux/meta-inipro/recipes-ai/glog/: glog_0.4.0.bb
petalinux/meta-inipro/recipes-ai/glog/files/: 0001-Modify-interface-link-libraries.patch
petalinux/meta-inipro/recipes-ai/unilog/: unilog.bb
petalinux/meta-inipro/recipes-ai/unilog/files/: libunilog-1.1.0-Linux-build46.deb
petalinux/meta-inipro/recipes-ai/vart/: vart.bb
petalinux/meta-inipro/recipes-ai/vitis-ai-library/: vitis-ai-library.bb
petalinux/meta-inipro/recipes-ai/vitis-ai-library/files/: vitis_ai_libraryConfig.cmake
petalinux/meta-inipro/recipes-ai/xir/: xir.bb
petalinux/meta-inipro/recipes-apps/heartrate-server/: heartrate-server.bb
petalinux/meta-inipro/recipes-apps/heartrate-server/files/: CMakeLists.txt
petalinux/meta-inipro/recipes-apps/pmic-prog/: pmic-prog.bb
petalinux/meta-inipro/recipes-bsp/device-tree/: device-tree.bbappend
petalinux/meta-inipro/recipes-connectivity/wpa-supplicant/: wpa-supplicant_%.bbappend
petalinux/meta-inipro/recipes-core/init-ifupdown/files/: interfaces
petalinux/meta-inipro/recipes-kernel/linux/: linux-xlnx_%.bbappend  linux-xlnx_2020.2.bbappend
petalinux/meta-inipro/recipes-kernel/linux/linux-xlnx/: 0001-Patch-the-kernel-to-manipulate-the-wifi-part-s-pins.patch  0002-ov5640-revert-to-2019.2.patch  0003-Add-support-Infineon-IR38060-IR38062-IR38063.patch
petalinux/meta-inipro/recipes-support/atk/: at-spi2-core_%.bbappend.backup
petalinux/meta-inipro/wic/: my-sdimage.wks
projects/facedetectwithtracking/: CMakeLists.txt
projects/facedetectwithtracking/src/: process_result.hpp
src/boot/: linux.bif
src/image/: platform_desc.txt
test/: ultra96v1_base.json  ultra96v2_base.json
test/dnndk/tf_resnet50/: CMakeLists.txt  Makefile
test/dnndk/tf_resnet50/src/: main.cc
test/dnndk/tf_yolov3_voc_py/: tf_yolov3_voc.py
test/vart/adas_detection/: CMakeLists.txt
test/vart/resnet50/: CMakeLists.txt
test/vitis-ai-library/classification/: CMakeLists.txt
test/vitis-ai-library/seg_and_pose_detect/: CMakeLists.txt
tool-example/: tf_compile_for_v2.sh  tf_eval_quantize_graph.sh  tf_quantize.sh
tool-example/example_file/: input_fn.py  resnet_eval.py
tutorials/CIFAR10-Classification-with-TensorFlow/: 0_setenv.sh  1_train.ipynb  7_make_target.sh  eval_graph.py  train.py
tutorials/DenseNetX_DPUv2/: 0_setenv.sh  1_train.ipynb  eval_graph.py  train.py
tutorials/Keras-Freeze-with-Vitis-AI/: keras_2_tf.py  run_all.sh  train_save.ipynb  train_save.py
tutorials/Keras-GoogleNet-ResNet/: 0_generate_images.sh  1_cifar10_train.sh  1_fmnist_train.sh  2_cifar10_Keras2TF.sh  2_fmnist_Keras2TF.sh  3a_cifar10_freeze.sh  3a_fmnist_freeze.sh  5_cifar10_vai_compile.sh  5_fmnist_vai_compile.sh  run_all.sh
tutorials/Keras-GoogleNet-ResNet/.ipynb_checkpoints/: 1_train-checkpoint.ipynb
tutorials/Keras-GoogleNet-ResNet/code/: Keras2TF.py  fix_miniVggNet.py  train_cifar10_data.py  train_cifar10_npz.py  train_fashion_mnist_data.py  train_fashion_mnist_npz.py
tutorials/Keras-GoogleNet-ResNet/target_template/: build_cifar10_test.sh  build_fmnist_test.sh  run_cifar10.sh  run_fmnist.sh
tutorials/Keras-GoogleNet-ResNet/target_template/cifar10/miniVggNet/: CMakeLists.txt  Makefile
tutorials/Keras-GoogleNet-ResNet/target_template/cifar10/miniVggNet/src/: fps_tf_main.cc  top5_tf_main.cc
tutorials/ML-at-Edge-yolov3/model_data/: 2007_test.txt
tutorials/ML-at-Edge-yolov3/sw/: CMakeLists.txt  build.sh  test_video_yolov3.cpp
tutorials/ML-at-Edge-yolov3/sw2/: CMakeLists.txt  process_result.hpp  test_video_yolov3.cpp
tutorials/MNIST-Classification-TensorFlow/: 0_setenv.sh  1_train.ipynb  7_make_target.sh  train.py
tutorials/VAI-KERAS-FCN8-SEMSEG/: 1_generate_images.sh  2_train.ipynb  open_pb_graph_in_tensorBoard.sh  run_fcn8.sh  run_fcn8ups.sh  run_unet.sh
tutorials/VAI-KERAS-FCN8-SEMSEG/code/: fcn8_training_npz.py  prepare_data_npz.py  unet_training_npz.py
tutorials/VAI-KERAS-FCN8-SEMSEG/target_template/: build_target.sh
tutorials/VAI-KERAS-FCN8-SEMSEG/target_template/fcn8/: CMakeLists.txt  Makefile
tutorials/VAI-KERAS-FCN8-SEMSEG/target_template/fcn8ups/: CMakeLists.txt  Makefile
tutorials/VAI-KERAS-FCN8-SEMSEG/target_template/fcn8ups/src/: fps_main.cc
tutorials/Vitis-AI-Custom-Platform/densebox_320_320/: meta.json
tutorials/Vitis-AI-Custom-Platform/densebox_640_360/: meta.json
tutorials/Vitis-AI-Custom-Platform/facedetect/: CMakeLists.txt  test_video_facedetect.cpp
tutorials/Vitis-AI-Custom-Platform/facetrack/: CMakeLists.txt  centroidtracker.cpp  centroidtracker.h  process_result.hpp
utils/: docker_run.sh
vart/adas_detection/: CMakeLists.txt
vart/resnet50/: CMakeLists.txt
vitis-ai-library/classification/: CMakeLists.txt
vitis-ai-library/facedetect/: CMakeLists.txt
vitis-ai-library/facedetect/src/: test_accuracy_facedetect.cpp
vitis-ai-library/yolov3/: CMakeLists.txt
(+41 files in other folders)
